<resources>
    <string name="app_name">Newton</string>
    <string name="author">Willie Caminero</string>

    <!--Login-->
    <string name="sing_in">Sign In</string>
    <string name="powered_by">Powered By</string>
    <string name="log_in">Log In</string>

    <!--labels.Common-->
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_id">Id</string>
    <string name="hint_name">Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_add">Add</string>
    <string name="hint_edit_client">Edit Client</string>
    <string name="hint_edit">Edit</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="hint_mount">Mount</string>
    <string name="hint_interest">Interest</string>
    <string name="hint_total_days">Total Days</string>
    <string name="hint_status">Status</string>
    <string name="value_cero">0</string>
    <string name="value_in_progress">In Progress</string>
    <string name="hint_payment_date">Payment Date</string>
    <string name="hint_delete">Delete</string>
    <string name="active_loans">Loans</string>
    <string name="label_start_date">Start Date:</string>
    <string name="label_end_date">End Date:</string>
    <string name="label_base_mount">Base Mount:</string>
    <string name="label_interest">Interest:</string>
    <string name="label_status">Status:</string>
    <string name="label_payments">Payments:</string>
    <string name="label_pending">Pending:</string>
    <string name="hint_client_managment">Client Managment</string>
    <string name="value_newton_software">Newton Software</string>
    <string name="hint_clients_options">Client Options</string>
    <string name="hint_home">Home</string>
    <string name="hint_report">Report</string>
    <string name="hint_log_out">Log Out</string>
    <string name="hint_settings">Settings</string>
    <string name="hint_login">Login</string>
    <string name="hint_add_client">Add Client</string>
    <string name="hint_client_detail">Client Detail</string>
    <string name="hint_add_loan">Add Loan</string>
    <string name="hint_loan_detail">Loan Detail</string>
    <string name="hint_edit_loan">Edit Loan</string>
    <string name="hint_payment_detail">Payment Detail</string>
    <string name="hint_report_date">Report Date</string>
    <string name="hint_search">Search</string>
    <string name="hint_summary_account">Summary Account</string>
    <string name="hint_previous_base">Previous base:</string>
    <string name="hint_payment">Payments:</string>
    <string name="hint_sale">Sales:</string>
    <string name="hint_expense">Expenses:</string>
    <string name="hint_current_base">CURRENT BASE:</string>

    <!--System Alerts-->
    <string name="hint_required">Required</string>
    <string name="hint_login_fail">Login Fail</string>
    <string name="hint_login_fail_message">The user or password are incorrect</string>
    <string name="hint_deleting_loan">Deleting Loan</string>
    <string name="hint_deleting_loan_message">Are you sure you want to delete this loan?</string>
    <string name="hint_deleting_payment">Deleting Payment</string>
    <string name="hint_deleting_payment_message">Are you sure you want to delete this payment?</string>
    <string name="hint_ok">Ok</string>
    <string name="hint_logout">Log out</string>
    <string name="hint_logout_message">Are you sure you want to log out?</string>
    <string name="hint_expense_success">Expense</string>
    <string name="hint_expense_success_message">Expense created successfully</string>
    <string name="hint_internet_connection">Connecting to Internet</string>
    <string name="hint_internet_connection_message">Can\'t Connect to Internet</string>
    <string name="hint_internal_error">Contact your administrator</string>
    <string name="hint_internal_error_message">An internal error has occurred in the application</string>
    <string name="hint_nav_expense">Expenses</string>
    <string name="hint_expense_date">Expense date</string>
    <string name="hint_description">Description</string>

</resources>
