<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lblStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:hint="@string/hint_start_date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glMiddle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="2012-01-01"
            android:maxLength="128"
            android:paddingStart="10dp"
            android:paddingEnd="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lblEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:hint="@string/hint_end_date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/glMiddle"
        app:layout_constraintEnd_toEndOf="@id/glEnd">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="128"
            tools:text="2014-02-20"
            android:paddingStart="10dp"
            android:paddingEnd="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lblMount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:hint="@string/hint_mount"
        app:layout_constraintTop_toBottomOf="@id/lblStartDate"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glMiddle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtMount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="1000"
            android:maxLength="128"
            android:paddingStart="10dp"
            android:paddingEnd="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lblInterest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:hint="@string/hint_interest"
        app:layout_constraintTop_toBottomOf="@id/lblEndDate"
        app:layout_constraintStart_toStartOf="@id/glMiddle"
        app:layout_constraintEnd_toEndOf="@id/glEnd">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="15%"
            android:maxLength="128"
            android:paddingStart="10dp"
            android:paddingEnd="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lblDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:hint="@string/hint_total_days"
        app:layout_constraintTop_toBottomOf="@id/lblMount"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glMiddle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="30"
            android:maxLength="128"
            android:paddingStart="10dp"
            android:paddingEnd="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lblStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:hint="@string/hint_status"
        app:layout_constraintTop_toBottomOf="@id/lblInterest"
        app:layout_constraintStart_toStartOf="@id/glMiddle"
        app:layout_constraintEnd_toEndOf="@id/glEnd">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value_in_progress"
            android:maxLength="128"
            android:paddingStart="10dp"
            android:paddingEnd="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditLoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hint_edit"
        app:layout_constraintTop_toBottomOf="@id/lblDays"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toStartOf="@id/btnDeleteLoan"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteLoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hint_delete"
        app:layout_constraintTop_toBottomOf="@id/lblDays"
        app:layout_constraintStart_toEndOf="@id/btnEditLoan"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        android:textColor="@android:color/holo_red_dark"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPrincipal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDeleteLoan">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPayments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_marginBottom="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/list_item_payment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_black_24dp"/>

    <ProgressBar
        android:id="@+id/pvProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="4dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>